Updates from Overleaf

--- a/00_config/packages.tex
+++ b/00_config/packages.tex
@@ -45,7 +45,7 @@
     giveninits=true,         % Vornamen Abkürzen
     dateuncertain=true,
     eprint=false,
-    url=false,
+    url=true,
     doi=false,
     isbn=false,
     sorting=nyt
