--- a/02_mainmatter/ch3_Methodik.tex
+++ b/02_mainmatter/ch3_Methodik.tex
@@ -218,9 +218,9 @@ Durch dieses iterative, problemzentrierte Vorgehen konnte die relevante Fachlite
 \label{sec:inhaltsanalyse}
 
 Die Auswertung der identifizierten Quellen erfolgte methodisch in Anlehnung an die Qualitative Inhaltsanalyse nach Mayring. 
-Konkret wurde die strukturierenden Inhaltsanalyse verwendet. Ziel war es, bestimmte Aspekte aus dem Material herauszufiltern und systematisch zu ordnen.\autocite{mayring_qualitative_2022}
+Konkret wurde die strukturierenden Inhaltsanalyse verwendet. Ziel war es, bestimmte Aspekte aus dem Material herauszufiltern und systematisch zu ordnen.\autocite[Vgl.]{mayring_qualitative_2022}
 
-Hierfür wurde ein deduktives Kategoriensystem gebildet.\autocite[vgl. S.68]{mayring_qualitative_2022} Das bedeutet, die Quellen wurden gezielt nach vorab definierten Strukturmerkmalen durchsucht, die für das zu entwickelnde Prozessmodell essenziell sind. Die zentralen Analysekategorien waren:
+Hierfür wurde ein deduktives Kategoriensystem gebildet.\autocite[Vgl.][ S.68]{mayring_qualitative_2022} Das bedeutet, die Quellen wurden gezielt nach vorab definierten Strukturmerkmalen durchsucht, die für das zu entwickelnde Prozessmodell essenziell sind. Die zentralen Analysekategorien waren:
 
 \begin{enumerate}
     \item \textbf{Prozessphasen:} Welche zeitlichen Abschnitte und Meilensteine (z.\,B. \textit{Design Freeze}) werden definiert?
