--- a/02_mainmatter/ch5_Transfer.tex
+++ b/02_mainmatter/ch5_Transfer.tex
@@ -1,10 +1,10 @@
 \chapter{Analyse systemischer Spannungsfelder und Implementierungsbarrieren}
 \label{ch:5}
 
-Kapitel 4 hat gezeigt, dass sich das Prozessmodell des Target Value Design (TVD) nicht ohne Weiteres auf Deutschland übertragen lässt. Die identifizierten Hürden sind keine Einzelfälle, sondern das Ergebnis eines Systemkonflikts.
+Kapitel 4 hat aufgezeigt, dass zwischen dem idealtypischen Prozessmodell des Target Value Design (TVD) und verschiedenen Gegebenheiten der deutschen Baupraxis eine Reibungspunkte entstehen können. Die identifizierten Hürden sind Symptome eines Systemkonflikts.
 Es prallen zwei Denkweisen aufeinander: Auf der einen Seite steht der TVD-Ansatz, der auf Flexibilität, Zusammenarbeit und Wahrscheinlichkeiten setzt. Auf der anderen Seite steht das deutsche System aus VOB, HOAI und Haushaltsrecht, das auf festen Preisen, strikter Trennung und detaillierten Vorgaben beharrt.
 
-Um diese strukturellen Probleme nicht als unübersichtliche Liste von Einzelpunkten abzuarbeiten, werden sie im Folgenden in drei thematische Spannungsfelder (\enquote{Dilemmata}) gebündelt:
+Um diese Probleme übersichtlich diskutieren zu können, werden sie im Folgenden in drei thematische Spannungsfelder (\enquote{Dilemmata}) gebündelt:
 
 \begin{enumerate}
     \item \textbf{Das Beschaffungs-Dilemma (Marktzugang und Recht):}\\
@@ -17,7 +17,7 @@ Um diese strukturellen Probleme nicht als unübersichtliche Liste von Einzelpunk
     Wo liegen die Grenzen der Machbarkeit? Dieses Cluster diskutiert Hürden, die selbst durch moderne Verträge (wie IPA) nicht gelöst werden können, weil sie im starren Genehmigungs- und Baurecht verankert sind (Fokus auf Phase 2 und 3).
 \end{enumerate}
 
-Ziel dieses Kapitels ist eine differenzierte Analyse: Welche Barrieren lassen sich durch neue Vertragsmodelle bereits senken und an welchen Stellen steht der gesetzliche Ordnungsrahmen einer echten TVD-Umsetzung weiterhin im Weg?
+Ziel dieses Kapitels ist eine differenzierte Betrachtung: Welche Barrieren lassen sich durch neue Vertragsmodelle (IPA) bereits senken und an welchen Stellen steht der gesetzliche Ordnungsrahmen und die kulturelle Baupraxis in Deutschland einer echten TVD-Umsetzung weiterhin im Weg?
 
 \section{Cluster 1: Das Beschaffungs-Dilemma}
 \label{sec:cluster1}
