--- a/02_mainmatter/ch6_Fazit.tex
+++ b/02_mainmatter/ch6_Fazit.tex
@@ -25,6 +25,6 @@ Es besteht Forschungsbedarf in der Weiterentwicklung der wertbasierten Steuerung
 
 Weiterhin zeigt die Analyse, dass selbst integrierte Vertragsmodelle wie die Integrierte Projektabwicklung (IPA) an externe Grenzen des Genehmigungs- und Haushaltsrechts stoßen. Hier ergibt sich Forschungsbedarf an der Schnittstelle zwischen Projektmethodik und Ordnungsrahmen. Insbesondere die Frage, wie iterative Planungsprozesse genehmigungsrechtlich besser abgebildet werden können, ohne die Rechtssicherheit zu gefährden, stellt eine zentrale Fragestellung dar.
 
-Zudem erscheint eine stärkere Differenzierung nach Projektarten sinnvoll. Die bestehende TVD-Literatur und -Praxis ist stark auf den Hochbau fokussiert, während Infrastrukturprojekte bislang nur randständig betrachtet werden. Wie bereits von Ballard angedeutet, unterscheiden sich insbesondere lineare Infrastrukturvorhaben mit sequenziellen Baustellenlogiken grundlegend von Gebäudeprojekten. Zukünftige Forschung sollte daher untersuchen, inwiefern TVD-Prinzipien für den Infrastrukturbau angepasst oder weiterentwickelt werden müssen, um deren spezifische Prozess- und Wertlogiken adäquat abzubilden.\autocite[vgl. S. 186]{ballard_target_2025}
+Zudem erscheint eine stärkere Differenzierung nach Projektarten sinnvoll. Die bestehende TVD-Literatur und -Praxis ist stark auf den Hochbau fokussiert, während Infrastrukturprojekte bislang nur randständig betrachtet werden. Wie bereits von Ballard angedeutet, unterscheiden sich insbesondere lineare Infrastrukturvorhaben mit sequenziellen Baustellenlogiken grundlegend von Gebäudeprojekten. Zukünftige Forschung sollte daher untersuchen, inwiefern TVD-Prinzipien für den Infrastrukturbau angepasst oder weiterentwickelt werden müssen, um deren spezifische Prozess- und Wertlogiken adäquat abzubilden.\autocite[Vgl.] [S. 186]{ballard_target_2025}
 
 Zuletzt wäre eine empirische Evaluation laufender TVD- und IPA-Projekte im deutschen Kontext sinnvoll, um die in dieser Arbeit überwiegend analytisch hergeleiteten Spannungsfelder anhand realer Projekterfahrungen zu validieren oder zu relativieren. Insbesondere das Zusammenspiel von iterativer Planung, Genehmigungspraxis und Kostenstabilität bietet hierfür ein relevantes Untersuchungsfeld.
