--- a/08_bibliography/references.bib
+++ b/08_bibliography/references.bib
@@ -1,4 +1,258 @@
 
+@book{haghsheno_lean_2019,
+	edition = {1},
+	title = {Lean {Construction}  {Begriffe} und {Methoden}},
+	isbn = {978-3-00-061123-0},
+	language = {de},
+	publisher = {German Lean Construction Institute – GLCI e. V.},
+	author = {Haghsheno, Shervin and Wachter, Nadia},
+	year = {2019},
+}
+
+@article{lahdenpera_making_2012,
+	title = {Making sense of the multi-party contractual arrangements of project partnering, project alliancing and integrated project delivery},
+	volume = {30},
+	issn = {0144-6193, 1466-433X},
+	url = {http://www.tandfonline.com/doi/abs/10.1080/01446193.2011.648947},
+	doi = {10.1080/01446193.2011.648947},
+	abstract = {Collaborative construction project arrangements have been the subject of many development efforts owing to the frustration felt toward the opportunism inherent in traditional contracting. Globally, three approaches have stood out: project partnering, project alliancing and integrated project delivery. These socalled relational project delivery arrangements have much in common. This study aims to clarify the similarities and differences between the arrangements by examining their key concepts and features one by one and in relation to each other; the motivation behind each is also examined. Early involvement of key parties, transparent ﬁnancials, shared risk and reward, joint decision-making, and a collaborative multiparty agreement are some of the features incorporated in all the arrangements to a varying degree. Beyond the numerous details, divergent applications and constant evolution presented, the study also recognizes project alliancing as a project delivery system in its own right due to its contractual structure that integrated project delivery aims to imitate while introducing some management approaches not included in project alliancing. Project partnering, although developed in leaps and bounds since its introduction, takes a more conservative approach to work scope and liabilities. Similarly, project alliancing takes relational contracting to the extreme compared to the current forms of integrated project delivery and, especially, project partnering.},
+	language = {en},
+	number = {1},
+	urldate = {2026-01-12},
+	journal = {Construction Management and Economics},
+	author = {Lahdenperä, Pertti},
+	month = jan,
+	year = {2012},
+	pages = {57--79},
+}
+
+@techreport{cheng_ipa-handlungsleitfaden_2020,
+	address = {Karlsruhe},
+	title = {{IPA}-{Handlungsleitfaden}: {Integrierte} {Projektabwicklung}},
+	institution = {IPA-Zentrum e.V.},
+	editor = {Cheng, Renée and Osburn, Laura},
+	collaborator = {Lee, Linda},
+	year = {2020},
+}
+
+@techreport{bmvi_abschlussbericht_2015,
+	address = {Berlin},
+	title = {Abschlussbericht der {Reformkommission} „{Bau} von {Großprojekten}“},
+	url = {https://www.bmvi.de/SharedDocs/DE/Publikationen/G/abschlussbericht-reformkommission-bau-grossprojekte.pdf},
+	urldate = {2025-11-29},
+	institution = {Bundesministerium für Verkehr und digitale Infrastruktur (BMVI)},
+	editor = {BMVI},
+	year = {2015},
+}
+
+@book{latham_constructing_1994,
+	address = {London},
+	edition = {7. impr},
+	title = {Constructing the team: final report; joint review of procurement and contractual arrangements in the {United} {Kingdom} construction industry},
+	isbn = {978-0-11-752994-6},
+	shorttitle = {Constructing the team},
+	language = {en},
+	publisher = {Stationery Office},
+	author = {Latham, Michael},
+	year = {1994},
+}
+
+@article{love_forensic_2008,
+	title = {Forensic {Project} {Management}: {An} {Exploratory} {Examination} of the {Causal} {Behavior} of {Design}-{Induced} {Rework}},
+	volume = {55},
+	copyright = {https://ieeexplore.ieee.org/Xplorehelp/downloads/license-information/IEEE.html},
+	issn = {0018-9391, 1558-0040},
+	shorttitle = {Forensic {Project} {Management}},
+	url = {https://ieeexplore.ieee.org/document/4494738/},
+	doi = {10.1109/TEM.2008.919677},
+	abstract = {The determination as to why projects fail to meet planned schedule, cost, and quality parameters is a leitmotiv within the construction, engineering, and project management literature. Yet, the interrelatedness and behavior of key factors that inﬂuence these project performance indicators, particularly regarding design-error-induced rework, have received limited academic examination. Design-induced rework has been reported to contribute more than 70\% of the total amount of rework experienced in construction and engineering projects. To address this situation, a forensic management approach to determining how and why rework occurred in a commercial construction project is undertaken. Using ﬁndings from this case study along with knowledge from the literature, a systemic causal model for design-error-induced rework is developed. Underlying behavioral dynamics that contributed to design errors (principally related to the management of the design documentation process) were modeled and simulated using system dynamics. The results of such an analysis yield insights about architectural and engineering professionals’ decisionmaking and work practices that can inﬂuence the occurrence of design errors. The mitigation of design-induced errors would signiﬁcantly reduce the amount of rework that architectural and engineering ﬁrms experience. This would bring with it greater profitability for such ﬁrms and improved project performance parameters (schedule, cost, and quality).},
+	language = {en},
+	number = {2},
+	urldate = {2026-01-12},
+	journal = {IEEE Transactions on Engineering Management},
+	author = {Love, Peter E. D. and Edwards, David J. and Irani, Zahir},
+	month = may,
+	year = {2008},
+	pages = {234--247},
+}
+
+@misc{vgv_verordnung_2016,
+	title = {Verordnung über die {Vergabe} öffentlicher {Aufträge}},
+	language = {Deutsch},
+	author = {VgV},
+	month = apr,
+	year = {2016},
+}
+
+@misc{vobb_din_2016,
+	title = {{DIN} 1961:2016-09, {VOB} {Vergabe}- und {Vertragsordnung} für {Bauleistungen}\_- {Teil}\_B: {Allgemeine} {Vertragsbedingungen} für die {Ausführung} von {Bauleistungen}},
+	shorttitle = {{DIN} 1961},
+	url = {https://www.dinmedia.de/de/-/-/256403134},
+	doi = {10.31030/2533135},
+	language = {de},
+	urldate = {2026-01-12},
+	publisher = {DIN Media GmbH},
+	author = {VOB/B},
+	year = {2016},
+}
+
+@misc{din_276_din_2018,
+	title = {{DIN} 276: {Kosten} im {Bauwesen}},
+	author = {DIN 276},
+	year = {2018},
+}
+
+@misc{hoai_honorarordnung_2021,
+	title = {Honorarordnung für {Architekten} und {Ingenieure} 2021},
+	shorttitle = {{HOAI} 2021},
+	url = {https://www.hoai.de/hoai/volltext/hoai-2021/},
+	abstract = {Hier finden Sie den vollständigen Text der aktuellen HOAI (Honorarordnung für Architekten und Ingenieure) in der Fassung von 2021.},
+	language = {de},
+	urldate = {2025-10-12},
+	author = {HOAI},
+	year = {2021},
+}
+
+@book{schwab_konfliktkompetenz_2019,
+	address = {Wiesbaden},
+	series = {erfolgreich studieren},
+	title = {Konfliktkompetenz im {Bauprojektmanagement}: {Konfliktrisiken} vermeiden – {Konfliktpotenziale} nutzen},
+	copyright = {http://www.springer.com/tdm},
+	isbn = {978-3-658-27088-9 978-3-658-27089-6},
+	shorttitle = {Konfliktkompetenz im {Bauprojektmanagement}},
+	url = {http://link.springer.com/10.1007/978-3-658-27089-6},
+	language = {de},
+	urldate = {2026-01-12},
+	publisher = {Springer Fachmedien Wiesbaden},
+	author = {Schwab, Nina},
+	year = {2019},
+	doi = {10.1007/978-3-658-27089-6},
+}
+
+@techreport{curt_collaboration_2004,
+	type = {White {Paper} {WP}-1202},
+	title = {Collaboration, {Integrated} {Information}, and the {Project} {Lifecycle} in {Building} {Design}, {Construction} and {Operation}},
+	url = {https://www.scribd.com/document/474888363/Collaboration-Integrated-Information-and-the-Project-Lifecycle-pdf},
+	abstract = {Scribd ist die weltweit größte soziale Plattform zum Lesen und Veröffentlichen.},
+	language = {de},
+	urldate = {2026-01-12},
+	institution = {The Construction Users Roundtable},
+	author = {CURT},
+	year = {2004},
+}
+
+@techreport{noauthor_notitle_nodate,
+}
+
+@article{ballard_lean_2003,
+	title = {Lean project management},
+	volume = {31},
+	number = {1},
+	journal = {Building Research \& Information},
+	author = {Ballard, Glenn and Howell, Gregory A.},
+	year = {2003},
+}
+
+@book{springer_fachmedien_wiesbaden_vob2019_2020,
+	address = {Wiesbaden},
+	edition = {3},
+	title = {{VOB}/{A} 2019 - {Textausgabe}/{Text} {Edition}: {Vergabe}- und {Vertragsordnung} für {Bauleistungen}, {Teil} {A}},
+	publisher = {Springer Fachmedien},
+	author = {{Springer Fachmedien Wiesbaden}},
+	year = {2020},
+}
+
+@book{frohlich_vob_2003,
+	address = {Wiesbaden},
+	title = {{VOB} {Vergabe}- und {Vertragsordnung} für {Bauleistungen} — {Gesamtkommentar}},
+	publisher = {Vieweg+Teubner Verlag},
+	author = {Fröhlich, Peter J.},
+	year = {2003},
+}
+
+@book{kochendorfer_vobb_2010,
+	address = {Wiesbaden},
+	edition = {3},
+	series = {Leitfaden des {Baubetriebs} und der {Bauwirtschaft} {Ser}},
+	title = {{VOB}/{B} {Nach} {Ansprüchen}: {Entscheidungshilfen} {Für} {Praktiker} in {Grafiken} und {Ablaufdiagrammen} {Mit} {Praxis}-{Beispielen}},
+	shorttitle = {{VOB}/{B} {Nach} {Ansprüchen}},
+	abstract = {Intro -- Vorwort -- Inhaltsverzeichnis -- 1 Einführung -- 1.1 Die drei Teile der VOB -- 1.2 Einbeziehung der VOB/B in das Vertragsverhältnis -- 1.3 VOB/B als Allgemeine Geschäftsbedingung -- 1.3.1 Begriff der Allgemeinen Geschäftsbedingungen -- 1.3.2 VOB/B als Ganzes -- 1.4 Bauherr - Generalunternehmer - Nachunternehmer -- 1.5 Kooperationspflichten -- 1.6 Leistung und Vergütung gemäß 1 und 2 VOB/B -- 1.6.1 Leistungsinhalt und vereinbarte Vergütung -- 1.6.2 Nachträgliche Eingriffe in den Leistungsinhalt durch den Auftraggeber -- 1.7 Vertragsarten -- 1.7.1 Übersicht -- 1.7.2 Einheitspreisvertrag -- 1.7.3 Pauschalvertrag -- 2 Ansprüche auf Vergütungsanpassung ( 2 VOB/B) -- 2.1 Überblick über die Mehrvergütungsansprüche gemäß 2 VOB/B -- 2.2 Ansprüche auf Vergütungsanpassung bei Mengenänderungen( 2 Nr. 3 VOB/B) -- 2.2.1 Überblick -- 2.2.2 Mengenänderungen beim Einheitsvertrag -- 2.2.3 Mengenänderungen beim Pauschalvertrag -- 2.2.4 Ablaufdiagramm: 2 Nr. 3 VOB/B -- 2.3 Ansprüche des Auftragnehmers auf Vergütungsan passung für geänderte Leistungen ( 2 Nr. 5 VOB/B) -- 2.3.1 Überblick -- 2.3.2 Anordnungsrecht des Auftraggebers nach 1 Nr. 3 VOB/B -- 2.3.3 Vollmacht -- 2.3.4 Sonderfälle -- 2.3.5 Anpassung der Vergütung -- 2.3.6 Nachweis -- 2.3.7 Ablaufdiagramm: 2 Nr. 5 VOB/B -- 2.4 Ansprüche des Auftragnehmers auf Vergütung für zusätzliche Leistungen ( 2 Nr. 6 VOB/B) -- 2.4.1 Überblick -- 2.4.2 Anordnungsrecht des Auftraggebers nach 1 Nr. 4 Satz 1 VOB/B -- 2.4.3 Ankündigung des Mehrvergütungsanspruchs -- 2.4.4 Abgrenzung zu geänderten Leistungen -- 2.4.5 Vollmacht -- 2.4.6 Nachweis -- 2.4.7 Ablaufdiagramm: 2 Nr. 6 VOB/B -- 2.5 Ansprüche des Auftraggebers auf Ausführung geänderteroder zusätzlicher Leistungen ( 1 Nr. 3 oder 1 Nr. 4Satz 1 VOB/B) ohne Nachtragsvereinbarung -- 2.5.1 Fehlende Nachtragsvereinbarung},
+	publisher = {Springer Fachmedien},
+	author = {Kochendörfer, Bernd},
+	collaborator = {Zanner, Christian and Feldhahn, Peer and Berner, Fritz},
+	year = {2010},
+}
+
+@techreport{kostka_grosprojekte_2025,
+	title = {Großprojekte in {Deutshcland} - {Zwischen} {Ambition} und {Realiät}},
+	institution = {Hertie School of Governance},
+	author = {Kostka, Genia and Anzinger, Niklas},
+	year = {2025},
+	pages = {3},
+}
+
+@techreport{walberg_wohnungsbau_2025,
+	address = {Kiel},
+	type = {Endbericht},
+	title = {Wohnungsbau in {Deutschland} 2025 - {Quo} vadis? {Wege} zu einem leistungsfähigen {Wohnungsmarkt}},
+	shorttitle = {Wohnungsbau in {Deutschland} 2025 - {Quo} vadis?},
+	language = {de},
+	institution = {Deutscher Mieterbund ARGE e.V},
+	author = {Deutscher Mieterbund},
+	collaborator = {Walberg, Dietmar and {Arbeitsgemeinschaft für Zeitgemäßes Bauen}},
+	year = {2025},
+}
+
+@misc{brinkmeier_bundeshaushalt_2025,
+	title = {Bundeshaushalt 2025: {Milliarden} für {Bau} und {Infrastruktur}},
+	shorttitle = {Bundeshaushalt 2025},
+	url = {https://bau.bi/baumagazin/wirtschaft-politik/bundeshaushalt-2025-neuer-schub-fuer-infrastruktur-und-bau-b19967},
+	abstract = {Rekordhaushalt mit neuem Sondervermögen beschlossen: Milliarden für Bahn, Wohnungsbau und Klimaschutz – Bauindustrie sieht Klärungsbedarf ► bei bau.bi lesen!},
+	language = {de},
+	urldate = {2025-12-27},
+	author = {Brinkmeier, B},
+	year = {2025},
+}
+
+@article{russell-smith_sustainable_2015,
+	title = {Sustainable target value design: integrating life cycle assessment and target value design to improve building energy and environmental performance},
+	shorttitle = {Sustainable target value design},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0959652614002467},
+	abstract = {Buildings are the largest consumer of energy and greatest contributor to climate change in the United Statesdconsuming approximately half of energy produced and contributing close to half of greenhouse gas emissions. Building designers, contractors, and owners currently have few methods to effectively control a building’s life cycle energy and environmental impacts during the design phase. Managing and reducing these impacts during design requires rapid information turnaround and decision-making. When left unconsidered, poor environmental design decisions leave potential design value uncaptured. This research combines life cycle assessment (LCA) and target value design (TVD) to rapidly produce more sustainable building designs. By establishing site-speciﬁc sustainability targets and using dynamically-updating life cycle assessments, this research demonstrates that buildings can be designed to perform at higher environmental standards than those designed without a target in place. The research also offers unique opportunities to analyze the tradeoffs between design and operational decisions.},
+	urldate = {2026-01-11},
+	author = {Russell-Smith, Sarah V. and Lepech, Michael D. and Fruchter, Renate and Meyer, Yves B.},
+	month = feb,
+	year = {2015},
+}
+
+@article{kozuch_nachhaltigkeit_2024,
+	title = {Nachhaltigkeit in der öffentlichen {Beschaffung}: {Befunde} zum „{Intention}-{Action}-{Gap}“ und wie er sich  verkleinern lässt},
+	shorttitle = {Nachhaltigkeit in der öffentlichen {Beschaffung}},
+	url = {https://www.bertelsmann-stiftung.de/doi/10.11586/2024096},
+	doi = {10.11586/2024096},
+	abstract = {Der deutsche Staat beschafft jedes Jahr im großen Umfang Waren und Dienstleistungen. Das selbst gesteckte Ziel: Nachhaltigkeitskriterien sollen eine entscheidende Rolle für die Vergabe sein, damit auch die öffentliche Beschaffung die Transformation hin zu mehr Nachhaltigkeit anschiebt. Aktuell werden auf kommunaler Ebene jedoch nur 13,7 Prozent der Aufträge unter Einschluss von Nachhaltigkeitskriterien vergeben – Tendenz sinkend! Das ergibt eine aktuelle Studie der Universität der Bundeswehr München im Auftrag der Bertelsmann Stiftung.},
+	language = {de},
+	urldate = {2026-01-11},
+	author = {Kozuch, Alessa and von Deimling, Christian and Eßig, Michael},
+	year = {2024},
+	note = {Publisher: Bertelsmann Stiftung},
+	keywords = {Nachhaltigkeit, Nachhaltigkeitskriterien, Vergaberecht, Verwaltung, Öffentliche Beschaffung},
+}
+
+@article{kozuch_nachhaltigkeit_2024-1,
+	title = {Nachhaltigkeit in der öffentlichen {Beschaffung}: {Befunde} zum „{Intention}-{Action}-{Gap}“ und wie er sich  verkleinern lässt},
+	shorttitle = {Nachhaltigkeit in der öffentlichen {Beschaffung}},
+	url = {https://www.bertelsmann-stiftung.de/doi/10.11586/2024096},
+	doi = {10.11586/2024096},
+	abstract = {Der deutsche Staat beschafft jedes Jahr im großen Umfang Waren und Dienstleistungen. Das selbst gesteckte Ziel: Nachhaltigkeitskriterien sollen eine entscheidende Rolle für die Vergabe sein, damit auch die öffentliche Beschaffung die Transformation hin zu mehr Nachhaltigkeit anschiebt. Aktuell werden auf kommunaler Ebene jedoch nur 13,7 Prozent der Aufträge unter Einschluss von Nachhaltigkeitskriterien vergeben – Tendenz sinkend! Das ergibt eine aktuelle Studie der Universität der Bundeswehr München im Auftrag der Bertelsmann Stiftung.},
+	language = {de},
+	urldate = {2026-01-11},
+	author = {Kozuch, Alessa and von Deimling, Christian and Eßig, Michael},
+	year = {2024},
+	note = {Publisher: Bertelsmann Stiftung},
+	keywords = {Nachhaltigkeit, Nachhaltigkeitskriterien, Vergaberecht, Verwaltung, Öffentliche Beschaffung},
+}
+
 @article{greb_projektantenproblematik_2024,
 	title = {Projektantenproblematik: {Vorbefassung} in {Vergabeverfahren}},
 	url = {https://www.dabonline.de/recht/projektantenproblematik-vorbefassung-vergabeverfahren/},
@@ -41,13 +295,6 @@
 	institution = {Zentralverband Deutsches Baugewerbe},
 	author = {ZDB},
 	year = {2024},
-}
-
-@misc{noauthor_verordnung_2016,
-	title = {Verordnung über die {Vergabe} öffentlicher {Aufträge}},
-	language = {Deutsch},
-	month = apr,
-	year = {2016},
 }
 
 @inproceedings{becker_adaptionen_2024,
@@ -350,16 +597,6 @@ Section: Research Methods \&amp; Reporting},
 	keywords = {300, 620, Alternative, Deutschland, Paradigmenwechsel, Projektabwicklung, Projektmanagement, Projektplanung, Verkehrsinfrastruktur, neue Ansätze},
 }
 
-@misc{noauthor_hoai_nodate,
-	title = {{HOAI} 2021: {Volltext} der aktuellen {HOAI} online auf {HOAI}.de},
-	shorttitle = {{HOAI} 2021},
-	url = {https://www.hoai.de/hoai/volltext/hoai-2021/},
-	abstract = {Hier finden Sie den vollständigen Text der aktuellen HOAI (Honorarordnung für Architekten und Ingenieure) in der Fassung von 2021.},
-	language = {de},
-	urldate = {2025-10-12},
-	journal = {HOAI.de},
-}
-
 @misc{noauthor_baukrise_2025,
 	title = {Baukrise 2025: {Ursachen}, {Auswirkungen} und {Lösungsansätze}},
 	shorttitle = {Baukrise 2025},
@@ -449,16 +686,6 @@ Section: Research Methods \&amp; Reporting},
 	month = jul,
 	year = {2025},
 	pages = {22},
-}
-
-@book{haghsheno_lean_2019,
-	edition = {1},
-	title = {Lean {Construction}  {Begriffe} und {Methoden}},
-	isbn = {978-3-00-061123-0},
-	language = {de},
-	publisher = {German Lean Construction Institute – GLCI e. V.},
-	author = {Haghsheno, Dr Shervin and Wachter, Nadia},
-	year = {2019},
 }
 
 @inproceedings{paslawski_lean_2016,
@@ -1092,5 +1319,3 @@ Publisher: RWTH Aachen University},
 	year = {2024},
 	pages = {47178},
 }
-
-
